--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+### IDEs###
+*.iml
+
 ### Go Patch ###
 /vendor/
 /Godeps/
